
syntax = "proto3";
package report;

option java_package = "com.imageworks.spcue.grpc.report";
option java_multiple_files = true;

import "host.proto";

// Interface to handle RQD pings.


// -------- Services --------]

service RqdReportInterface {
    // Send in when RQD starts up to announce new idle procs to the cue.
    rpc ReportRqdStartup(RqdReportRqdStartupRequest) returns (RqdReportRqdStartupResponse);

    // Reports in a running frame
    rpc ReportRunningFrameCompletion(RqdReportRunningFrameCompletionRequest) returns (RqdReportRunningFrameCompletionResponse);

    // An incremental status report sent by RQD
    rpc ReportStatus(RqdReportStatusRequest) returns (RqdReportStatusResponse);
}


// -------- Primary Message Types --------]

message BootReport {
    RenderHost host = 1;
    CoreDetail core_info = 2;
}

message CoreDetail {
    int32 total_cores = 1;
    int32 idle_cores = 2;
    int32 locked_cores = 3;
    int32 booked_cores = 4;
}

message FrameCompleteReport {
    RenderHost host = 1;
    RunningFrameInfo frame = 2;
    int32 exit_status = 3;
    int32 exit_signal = 4;
    int32 run_time = 5;
}

message HostReport {
    RenderHost host = 1;
    repeated RunningFrameInfo frames = 2;
    CoreDetail core_info = 3;
}

message RenderHost {
    string name = 1;
    bool nimby_enabled = 2; // NIMBY is enabled when the machine is in run level 5.
    bool nimby_locked = 3; // if nimby has locked the host due to user activity
    string facility= 4; // The name of the facility that the host is in
    int32 num_procs = 5; // the number of physical procs on this machine
    int32 cores_per_proc = 6; // the number of cores per proc
    int32 total_swap = 7; // the total size of the swap in kB
    int32 total_mem = 8; // the total size of the main memory pool in kB
    int32 total_mcp = 9; // the total size of MCP in kB
    int32 free_swap = 10; // the current amount of free swap in kB
    int32 free_mem = 11; // the current amount of free memory in kB
    int32 free_mcp = 12; // the current amount of free MCP in kB
    int32 load = 13; // the current load on the proc
    int32 boot_time = 14; // the time the proc was booted
    repeated string tags = 15; // an array of default tags that are added to the host record
    host.HardwareState state = 16; // hardware state for the host
    map<string, string> attributes = 17; // additional data can be provided about the host
};

message RunningFrameInfo {
    string resource_id = 1;
    string job_id = 2;
    string job_name = 3;
    string frame_id = 4;
    string frame_name = 5;
    string layer_id = 6;
    int32 num_cores = 7;
    int64 start_time = 8;
    int64 max_rss = 9; // kB
    int64 rss = 10; // kB
    int64 max_vsize = 11; // kB
    int64 vsize = 12; // kB
    map<string, string> attributes = 13; //additional data can be provided about the running frame
};


// -------- Requests & Responses --------]

// ReportRqdStartup
message RqdReportRqdStartupRequest {
    BootReport boot_report = 1;
}

message RqdReportRqdStartupResponse {} // Empty

// ReportRunningFrameCompletion
message RqdReportRunningFrameCompletionRequest {
    FrameCompleteReport frame_complete_report = 1;
}
message RqdReportRunningFrameCompletionResponse {} // Empty

// ReportStatus
message RqdReportStatusRequest {
    HostReport host_report = 1;
}
message RqdReportStatusResponse {} // Empty
